Modified for version 1.1.5

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="EuNet.CodeGenerator.Templates" Version="1.1.0" />
+    <PackageReference Include="EuNet.CodeGenerator.Templates" Version="1.1.5" />
+    <PackageReference Include="EuNet.UnityShims" Version="1.1.5" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
